2005-03-01 Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/uim/im_uim.c:
	  - applied a patch from Etsushi Kato. (for focus problem)
	  - get rid of compiler warning.
	  - allow to work with uim-0.3.8.

	* inputmethod/iiimf/im_iiimf.c, inputmethod/iiimf/im_iiimf.h,
	  inputmethod/iiimf/aux.c, inputmethod/iiimf/keymap.c,
	  inputmethod/m17nlib/im_m17nlib.c, inputmethod/scim/im_scim_mod_if.c,
	  inputmethod/scim/im_scim_1.0.cpp, inputmethod/scim/im_scim_1.2.cpp:
	  get rid of compiler warning.

2005-02-28 Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/iiimf/im_iiimf.c: minor code cleanup.
	* inputmethod/iiimf/aux.c: minor code cleanup.

	* configure.in: IIIMF plugin cannot be used with --with-libltdl.

	* xwindow/x_term_manager.c (client_connected):
	  - argv[argc + 1] = NULL ;   --->   argv[argc] = NULL ;
	  - "mlclient --foo=bar" does not work. fixed.

2005-02-26 MINAMI Hirokazu <minami@mistfall.net>

	* mlterm/ml_screen.h: reverted the last change.
	(it should be done in 3.x)

2005-02-25 Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/iiimf/im_iimf.c: minor code cleanup.
	* inputmethod/iiimf/aux.c: minor code cleanup.

	* inputmethod/uim/im_uim.c: minor code cleanup.
	* inputmethod/uim/LICENCE: new file

	* inputmethod/m17nlib/LICENCE: new file

	* inputmethod/kbd/LICENCE: new file

	* configure.in: removed -DSCIM_1_2_0
	* inputmethod/scim/im_scim_1.0.cpp: renamed from im_scim.cpp
	* inputmethod/scim/im_scim_1.2.cpp: new file
	* inputmethod/scim/Makefile.in: added im_scim_@SCIM_VERSION@.o
	* inputmethod/scim/im_scim_mod_if.c: code cleanup
	* inputmethod/scim/LICENCE: new file

	Note: In the next release, SCIM plugin will be distributed under LGPL.
	      See inputmethod/scim/LICENCE for more detail.

2005-02-24 Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/m17nlib/im_m17nlib.c: minor code cleanup.

	* configure.in:
	  - fixed typo. (scim=$enable_m17nlib)
	  - added -DSCIM_1_2_0. (beginning of #ifdef hell)

2005-02-24 Seiichi SATO <ssato@sh.rim.or.jp>
